<resources>
    <string name="app_name">CSC365</string>
    <string name="welcome_message">WELCOME TO MY CSC365 PROJECT</string>

    <string name="end_date_title">Please Select End Date:</string>
    <string name="start_date_title">Please Select Start Date:</string>
    <string name="cont">Continue</string>
    <string name="new_search">Create New Search</string>


    <string name="title_state">State</string>
    <string name="title_fips">FIPS ID</string>
    <string name="title_temp">Temp (F)</string>

    <string name="title_city">City</string>
    <string name="title_tmax">Temp (MAX)</string>
    <string name="title_tavg">Temp (AVG)</string>
    <string name="title_assign_1">Assignment 1</string>
    <string name="title_assign_2">Assignment 2</string>

    <string name="title_nav_selection">Back To Selection</string>
    <string name="text_summer">Summer Data</string>
    <string name="text_winter">Winter Data</string>


    <string name="date_picked" formatted="false">Information for %s</string>
    <string name="no_info">No Info</string>

    <string name="location_write_format" formatted="false">location_model_%s.json</string>
    <string name="data_write_format" formatted="false">data_model_%s.txt</string>

    <string name="data_btree_values" formatted="false">btree_values_%d.json</string>
    <string name="node_format" formatted="false">node_%d</string>
    <string name="clustering_title">Clustering</string>
    <string name="clustering_button">Go to Clustering</string>
</resources>
