<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_weight="1"
                android:id="@+id/btn_nav_back_cluster"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:text="@string/title_nav_selection" />

            <Spinner
                android:id="@+id/spinner_cluster"
                android:layout_width="150dp"
                android:layout_height="50dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_city"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/title_tmax"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/title_tavg"
                android:textSize="19sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ListView
            android:id="@+id/listview_cluster"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

    </LinearLayout>


</FrameLayout>